# rain-world-coalescence

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Cross.toml  Directory.Build.props  InteropTest.cs  README.md  YourModName.cs  build.csproj  interoptest.csproj  mod.csproj  modinfo.json  multiplayer_mvp.csproj  yourmodname.csproj
MultiplayerMvpClient/: MultiplayerMvpClient.csproj
MultiplayerMvpClient/NativeInterop/: MultiplayerMvpNative.cs
MultiplayerMvpClient/Plugin/: MultiplayerMvpClientPlugin.cs
MultiplayerMvpClient/Plugin/Menu/: MultiplayerLobby.cs
assets/: modinfo.json
client/: Cargo.toml  build.csproj
client/assets/: modinfo.json
client/mod/MultiplayerMvpClient/: MultiplayerMvpClientPlugin.cs
client/mod/MultiplayerMvpClient/Menu/: MultiplayerLobby.cs
client/mod/MultiplayerMvpClient/NativeInterop/: MultiplayerMvpClientNative.cs  MultiplayerMvpNative.cs
client/mod/MultiplayerMvpClient/Plugin/: MultiplayerMvpClientPlugin.cs
client/mod/MultiplayerMvpClient/Plugin/Menu/: MultiplayerLobby.cs
client/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
crates/client/: Cargo.toml  build.rs  cbindgen.toml
crates/client/src/: app.rs  ffi.rs  lib.rs
crates/coalescence_client/: Cargo.toml  cbindgen.toml
crates/coalescence_client/src/: app.rs  ffi.rs
crates/coalescence_common/: Cargo.toml
crates/coalescence_common/src/: receive_stream_driver.rs  runtime.rs
crates/coalescence_proto/: Cargo.toml
crates/coalescence_proto/src/: channel.rs  connection.rs  is.rs  lib.rs  packet.rs  peer.rs  plugin.rs  serde.rs  state.rs
crates/coalescence_proto/src/connection/: byte_queue.rs
crates/coalescence_proto/src/packet/: header.rs  packet_receiver.rs  packet_sender.rs  receiver.rs  sender.rs
crates/coalescence_proto/src/serde/: bincode.rs  byte_queue.rs
crates/coalescence_quinn/: Cargo.toml
crates/coalescence_quinn/src/: client.rs  lib.rs  server.rs
crates/coalescence_server/: Cargo.toml
crates/coalescence_server/src/: main.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs  runtime.rs  send_stream_driver.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
mod/CoalescenceClient/: ClientProfile.cs  CoalescenceClient.csproj  CoalescenceClientPlugin.cs  clangsharp.rsp
mod/CoalescenceClient/Menu/: CustomMenuBase.cs  CustomMenuBuilder.cs  ScreenDimensions.cs  ServerBrowserMenu.cs  ServerLobbyMenu.cs  SinglePageMenu.cs
mod/CoalescenceClient/NativeInterop/: Interop.cs  InteropUtils.cs  SafeAppHandle.cs
mod/CoalescenceClient/assets/: modinfo.json
mod/MultiplayerMvpClient/: ClientProfile.cs  MultiplayerMvpClient.csproj  MultiplayerMvpClientPlugin.cs  clangsharp-bindings-header.txt  clangsharp.rsp
mod/MultiplayerMvpClient/Menu/: CustomMenuBase.cs  CustomMenuBuilder.cs  MultiplayerLobby.cs  ScreenDimensions.cs  ServerBrowserMenu.cs  ServerLobbyMenu.cs  SinglePageMenu.cs
mod/MultiplayerMvpClient/NativeInterop/: AppContainer.cs  Interop.cs  InteropUtils.cs  MultiplayerMvpClientNative.cs  SafeAppHandle.cs
mod/MultiplayerMvpClient/assets/: modinfo.json
mod/assets/: modinfo.json
properties/: AssemblyInfo.cs
rust/: Cargo.toml
rust/src/: lib.rs
server/: Cargo.toml
src/interop/: Interop.cs
src/plugin/: MultiplayerMvpPlugin.cs
src/plugin/menu/: MultiplayerLobby.cs
