[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Pixelstorm"]
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/Pixelstormer/rw-multiplayer-mvp"
version = "0.1.0"

[workspace.dependencies]
bevy = { git = "https://github.com/Pixelstormer/bevy.git", branch = "fork-main", default-features = false, features = [
	"async-io",
	"multi-threaded",
] }
quinn = { version = "0.10", default-features = false, features = [
	"native-certs",
	"tls-rustls",
	"log",
] }
rustls = { version = "0.21", default-features = false, features = [
	"logging",
	"dangerous_configuration",
] }
