[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Pixelstorm"]
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/Pixelstormer/rain-world-coalescence"
version = "0.1.0"

[workspace.dependencies]
bevy = { git = "https://github.com/Pixelstormer/bevy.git", branch = "fork-main", default-features = false, features = [
	"async-io",
	"multi-threaded",
] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.5"
async-io = "1.13"
futures-lite = { version = "1.13", default-features = false }
