[package]
name = "multiplayer_mvp_client"
description = "Native library used by the C# mod"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
multiplayer_mvp_common = { path = "../common" }
bevy_quinnet = "0.5"
anyhow = "1.0"
widestring = "1.0"

[dependencies.bevy]
version = "0.11"
default-features = false
features = ["multi-threaded"]
