[package]
name = "multiplayer_mvp_server"
description = "Dedicated server binary"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
multiplayer_mvp_common = { path = "../common" }
bevy_quinnet = "0.5"

[dependencies.bevy]
version = "0.11"
default-features = false
features = ["multi-threaded"]
