[package]
name = "multiplayer_mvp_client"
description = "Native library used by the C# mod"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
multiplayer_mvp_net = { path = "../net" }
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.5"
async-io = "1.13"
futures-lite = { version = "1.13", default-features = false }
widestring = "1.0"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-error = "0.2"
bevy.workspace = true
quinn.workspace = true
rustls.workspace = true

[build-dependencies]
cbindgen = "0.26"
