[package]
name = "coalescence_client"
description = "Native library used by the C# mod"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
coalescence_common = { path = "../coalescence_common" }
coalescence_quinn = { path = "../coalescence_quinn" }
anyhow = "1.0"
thiserror = "1.0"
widestring = "1.0"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-error = "0.2"
async-io.workspace = true
futures-lite.workspace = true
bytes.workspace = true
bevy.workspace = true

[build-dependencies]
cbindgen = "0.26"
