[package]
name = "coalescence_common"
description = "Shared types and logic between client and server"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-io = "1.13"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
futures-lite = { version = "1.13", default-features = false }
bevy.workspace = true
quinn.workspace = true
rustls.workspace = true
