[package]
name = "coalescence_proto"
description = "Sans-IO networking protocol implementation"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bincode = { version = "1.3", optional = true }
thiserror = "1.0"
enumset = "1.1"
strum = { version = "0.25", features = ["derive"] }
bevy.workspace = true
bytes.workspace = true
serde.workspace = true

[features]
default = ["bincode"]
