[package]
name = "coalescence_quinn"
description = "Quinn-based I/O integration for the networking protocol"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
coalescence_proto = { path = "../coalescence_proto" }
thiserror = "1.0"
quinn = { version = "0.10", default-features = false, features = ["native-certs", "tls-rustls", "log"] }
rustls = { version = "0.21", default-features = false, features = ["logging", "dangerous_configuration"] }
rcgen = "0.11"
async-io.workspace = true
futures-lite.workspace = true
bevy.workspace = true
bytes.workspace = true
