[package]
name = "coalescence_server"
description = "Dedicated server binary"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
coalescence_common = { path = "../coalescence_common" }
bevy.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen = "0.11"
anyhow = "1.0"
crossbeam = "0.8"
