[package]
name = "coalescence_server"
description = "Dedicated server binary"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
coalescence_common = { path = "../coalescence_common" }
coalescence_quinn = { path = "../coalescence_quinn" }
bevy.workspace = true
anyhow = "1.0"
crossbeam = "0.8"
