[package]
name = "multiplayer_mvp_server"
description = "Dedicated server binary"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
multiplayer_mvp_net = { path = "../net" }
bevy.workspace = true
